--- a/index.html
+++ b/index.html
@@ -721,7 +721,8 @@
     </footer>
   </div>
 
-  <script src="faq-data.js"></script>
+  <!-- Bump de versie (bijv. v=3) wanneer je faq-data.js hebt aangepast, zodat iedereen de nieuwe inhoud ziet i.p.v. cache. -->
+  <script src="faq-data.js?v=2"></script>
   <script>
     const data = typeof FAQ_DATA !== "undefined" ? FAQ_DATA : [];
 
