Projectomschrijving: link projectenbundel + Bijgewerkt-badge
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -749,7 +749,8 @@
     const RECENTLY_UPDATED_QUESTION_IDS = [
       "uren-per-student",
       "eindwerk-engels",
-      "hoeveel-stagebezoeken"
+      "hoeveel-stagebezoeken",
+      "projectomschrijving-wat"
     ];
 
     const sectionListEl = document.getElementById("sectionList");
